--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.css">
-    <title>Our Framework</title>
+    <title>Instagram</title>
 </head>
 <body>
     <header>
-      <div class="container">
-        <img src="http://placehold.it/200x40" class="logo" />
-        <div class="buttons">
-          <a href="#" class="btn-default">Получить приложение</a>
-          <a href="#" class="btn-default">Войти</a>
+        <div class="container">
+            <div class="header-logo">
+                <img src="images/logo.png" alt="" width="32px" height="32px">
+            </div>
+            <div class="header-sign">
+                <img src="images/Instagram.png" width="110px" height="40px" alt="">
+            <div class="buttons">
+                <a href="#" class="btn-default">Получить приложение</a>
+                <a href="#" class="btn-default">Войти</a>
+            </div>
+            </div>
+
         </div>
-      </div>
     </header>
 
     <div class="container">
