Доделана фотография профиля

--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
                 <a href="#" class="btn-default">Войти</a>
             </div>
             </div>
-
         </div>
     </header>
 
     <div class="container">
+        <div class="row profile">
+            <div class="col">
+                <img class="profile-img" src="./images/aspnetcore.png" alt="Люблю C#)))">
+            </div>
+            <div class="col">
+                <p class="profile-name">dennisaltaev
+                    <button class="btn btn-default">Подписаться</button>
+                </p>
+                
+                <div class="row profile-data ">
+                    <span class="profile-data-text"><b>256</b> постов</span>
+                    <span class="profile-data-text"><b> 1024 </b> подписчиков </span>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col">
                 <img src="http://placehold.it/400x400" alt="">
